# Copyright (c) 2020 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("sample") {
    features = [    
        "e53_ia1_smart_agriculture_sample:cloud_oc_agriculture"
        #"01-hello:hello",
        #"02-producer_consumer:producer_consumer",
        #"03-basic_led:led_example",
        #"04-led_key:led_example",
        #"05-motor_key:motor_example",
        #"06-pwm_led:pwm_example",
        #"07-kv_store:kv_store",
        #"08-wifi_sta_connect:wifi_sta_connect",
        #"09-wifi_client:tcp_client",
        #"12-message:message",
        #"10-pv_semaphore:semaphore",
        #"11-iot_mqtt:iot_mqtt"
    ]
}


